--- a/《Python编程_从入门到实践》/readme
+++ b/《Python编程_从入门到实践》/readme
@@ -1,3 +1,6 @@
 # 记录《Python编程：从入门到实践》的所有练习代码及项目
 # 有条件可入正版书籍。
 # 电子书下载地址：链接: https://pan.baidu.com/s/1TOdSjYEjpnnHbW9QEjouHw 提取码：9j1m
+
+日志
+2019-04-23 初步完成飞船大战外星人的初步机制
