--- a/《Python编程_从入门到实践》/readme
+++ b/《Python编程_从入门到实践》/readme
@@ -3,6 +3,11 @@
 # 电子书下载地址：链接: https://pan.baidu.com/s/1TOdSjYEjpnnHbW9QEjouHw 提取码：9j1m
 
 日志
+2019-05-08 
+  完成教材里的《飞船大战外星人》， 
+
+2019-05-07 
+  添加Play按钮
+  实现绘制点和弧线
+
 2019-04-23 初步完成飞船大战外星人的初步机制
-2019-05-07 添加Play按钮
-2019-05-08 完成教材里的《飞船大战外星人》， （ToDo：自行优化界面与设定）
